--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "private": true,
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.0.3-6",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
-    "toastify-js": "^1.10.0"
+    "tingle.js": "^0.16.0",
+    "toastify-js": "^1.10.0",
+    "trix": "^1.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
